<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/detalleReporteOpcionesNuevoMasInformacion"
        android:id="@+id/detalle_reporte_opciones_nuevo_masInf"
        android:layout_weight="1"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/detalleReporteOpcionesNuevoPriorizar"
        android:id="@+id/detalle_reporte_opciones_nuevo_priorizar"
        android:layout_weight="1"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/detalleReporteOpcionesNuevoDenegar"
        android:id="@+id/detalle_reporte_opciones_nuevo_denegar"
        android:layout_weight="1" />
</LinearLayout>