<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pruebas.mantenimiento_administrador.reporteEstadoNuevoMasInformacionFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/reporteEstadoNuevoMasInformacionTitulo"
                android:layout_gravity="top|center"
                android:id="@+id/textView2"
                android:layout_weight="0.50" />
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/reporteDescripcion"
                android:id="@+id/textView3"
                android:layout_weight="0.42"
                />

                <TextView
                    android:text="serDescripcion"
                    android:id="@+id/estadoNuevoMasInfTextViewDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:padding="5dip"
                    android:lines="5"
                    android:scrollbars = "vertical"
                    android:layout_weight="0.73" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/reporteEstadoNuevoMasInformacionSolicitar"
            android:id="@+id/eeeeee"
            android:layout_weight="0.44"/>

        <EditText
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:padding="1dp"
            android:layout_margin="4dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:background="@drawable/edit_text_descripcion"
            android:lines="4"
            android:scrollbars = "vertical"
            android:id="@+id/estadoNuevoMasInfEditTextSolicitar"
            android:layout_column="0"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonAceptar"
                android:id="@+id/estadoNuevoMasInfButtonAceptar" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonCancelar"
                android:id="@+id/estadoNuevoMasInfButtonCancelar"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
