<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pruebas.mantenimiento_administrador.reporteEstadoPriorizadoIniciarFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/reporteEstadoPriorizadoIniciarTitulo"
            android:id="@+id/textView8"
            android:layout_gravity="top|center"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/reporteEstadoPriorizadoIniciarTecnicos"
                android:id="@+id/textView10"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/reporteEstadoPriorizadoIniciarAsignados"
                android:id="@+id/textView12"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="343dp"
            android:layout_weight="1">

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/estadoPriorizadoIniciarListViewTecnicos"
                android:layout_weight="1"
                android:background="@drawable/list_view_asignar_tecnico"
                android:layout_marginRight="1dp"
                />

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/estadoPriorizadoIniciarListViewSeleccionados"
                android:layout_weight="1"
                android:background="@drawable/list_view_asignar_tecnico"
                android:layout_marginLeft="1dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonCancelar"
                android:id="@+id/estadoPriorizadoIniciarButtonCancelar"
                android:layout_weight="1"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonIniciar"
                android:id="@+id/estadoPriorizadoIniciarButtonAceptar"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
